--- a/src/flexbox.grid.html/exercicio1.fg.html
+++ b/src/flexbox.grid.html/exercicio1.fg.html
@@ -5,7 +5,9 @@
         <meta charset="utf-8">
         <meta lang="pt-br">
         <link rel="stylesheet" href="./fg.css">
-        
+        <style>
+            
+        </style>
 
 </head>
 <body>
