--- a/src/flexbox.grid.html/exercicio3.fg.html
+++ b/src/flexbox.grid.html/exercicio3.fg.html
@@ -9,7 +9,7 @@
              }
           aside{
       width: 250px;
-      background-color:#111
+      background-color:#111;
     
              }
            main{
